--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">UngDungDatLichCatToc</string>
+    <string name="password">PassWord</string>
+    <string name="phone">Phone</string>
 </resources>
