--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="forgot_password"><u>Quên mật khẩu </u>.
     </string>
     <string name="txtchinhsua"><u>CHỈNH SỬA THÔNG TIN  </u> </string>
+    <string name="txtxemchitiet"><u>Xem chi tiết   </u> </string>
     <string name="txtname"><u>Bùi Phương Nam   </u>
     </string>
     <string name="txtlogin"><u>Đăng nhập </u>
