--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="not_a_member">Bạn chưa có tài khoản ?</string>
     <string name="forgot_password"><u>Quên mật khẩu </u>.
     </string>
-    <string name="txtchinhsua"><u>CHỈNH SỬA THÔNG TIN  </u> </string>
+    <string name="txtchinhsua"><u>CẬP NHẬT</u> </string>
     <string name="txtxemchitiet"><u>Xem chi tiết   </u> </string>
     <string name="txtname"><u>Bùi Phương Nam   </u>
     </string>
