--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="registration_failed">Registration failed</string>
     <string name="repeat_password">Repeat password</string>
     <string name="txtdiscover">DISCOVER</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
