dung add gg map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="GDCTitle5_content51">Công ty Cp thương mại dịch vụ Hair Salon Địa chỉ : số 82 Trần Đại Nghĩa , P.Đồng Tâm, Q. Hai Bà Trưng, Hà Nội Mã số Thuế : 0107467693</string>
     <string name="GDC_txtTitle6">4.Phương tiện và công cụ để người dùng tiếp cận và chỉnh sửa dữ liệu cá nhân của mình</string>
     <string name="GDCTitle6_content61">Khách hàng muốn chỉnh sửa thông tin cá nhân của mình vui lòng liên hệ SĐT công ty: 0888682346</string>
+    <string name="Map_API_KEY">AIzaSyBF7EWL56sQb2-uSVyfqyKAlkfXuePsp90</string>
 </resources>
