dung fix fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">UngDungDatLichCatToc</string>
+    <string name="app_name">Ứng Dụng Đặt Lịch Cắt Tóc</string>
     <string name="phone">Phone</string>
     <string name="password">Password</string>
     <string name="thongtin">THÔNG TIN TÀI KHOẢN</string>
