dung set string code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="thongtin">THÔNG TIN TÀI KHOẢN</string>
     <string name="register_now"><u>Đăng kí</u> </string>
 
-    <string name="register_successfully">Register Successfully</string>
+    <string name="register_successfully">Đăng Ký Tài Khoản Thành Công</string>
     <string name="not_a_member">Bạn chưa có tài khoản ?</string>
     <string name="forgot_password"><u>Quên mật khẩu</u></string>
     >
