--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="GDCTitle1_contentPart32">- Đảm bảo cung cấp dịch vụ đúng thời gian khách hàng yêu cầu (khách hàng đã đặt lịch ).</string>
     <string name="GDCTitle1_contentPart33">Nghĩa vụ của khách hàng:</string>
     <string name="GDCTitle1_contentPart34">- Có mặt tại salon đúng thời gian đã đặt lịch để sử dụng dịch vụ.</string>
+    <string name="GDCTitle1_contentPart35">- Mọi hành vi phá hoại như spam sẽ bị xóa tài khoản vĩnh viễn mà không báo trước.</string>
     <string name="GDCTitle1_txtPart4">4. Phương thức thanh toán:</string>
     <string name="GDCTitle1_contentPart4.1">- Khách hàng thanh toán bằng hình thức trả tiền mặt khi sử dụng xong dịch vụ. App không có chức năng thanh toán trực tuyến.</string>
     <string name="GDC_txtTitle2">II. Miễn trừ trách nhiệm trong trường hợp phát sinh lỗi kỹ thuật của App Hair Salon:</string>
